<resources>
    <string name="app_name">jsonwizard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="badly_formed_date">Badly formed date</string>
    <string name="badly_formed_time">Badly formed time</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="confirm_form_close">Confirm Form Close</string>
    <string name="confirm_form_close_explanation">Are you sure you want to go back? All data you have entered in this form will be cleared.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="record_location">Record Location</string>
    <string name="latitude">Latitude: %s</string>
    <string name="longitude">Longitude: %s</string>
    <string name="altitude">Altitude: %s</string>
    <string name="accuracy">Accuracy: %s</string>
    <string name="loading_location">Loading Location</string>
    <string name="could_not_get_your_location">Could not get your GPS location</string>
    <string name="using_provider">Using %s provider</string>
    <string name="unknown_gps_accuracy">Accuracy is Unknown</string>
    <string name="required">*</string>
    <string name="info_label">Info Label</string>
    <string name="label_text_string">%1$s %2$s</string>
    <string name="the_toaster_icon">The toaster icon</string>
    <string name="asterisks">*</string>
    <string name="save">Save</string>
    <string name="radio_button_tap_to_change">Tap to Change</string>
    <string name="select_one">Select a Number</string>
    <string name="done">Done</string>
    <string name="please_wait_title">Please Wait</string>
    <string name="creating_repeating_group_title">Please Wait</string>
    <string name="creating_repeating_group_message">Creating Repeating Group</string>
    <string name="launching_rdt_capture_message">Launching RDT capture widget</string>
    <string name="repeating_group_max_value_err_msg">The number of repeating groups cannot be greater than %1$d</string>
    <string name="repeating_group_min_value_err_msg">The number of repeating groups must greater than %1$d</string>
    <string name="repeating_group_number_format_err_msg">The number of repeating groups must be an integer value</string>
    <string name="enter_number_of_repeating_group_items">Enter # of repeating group items</string>
    <string name="repeating_group_item">Item</string>
    <string name="repeating_group_label">repeating_group_label</string>

    <string-array name="spinnerItems">
    </string-array>

    <string name="scan_qr_code_title">Scan QR Code</string>

    <!--The barcode strings-->
    <string name="permission_camera_rationale">Access to the camera is needed for this application</string>
    <string name="no_camera_permission">This application cannot run because it does not have permission to access the camera. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode Read Successfully</string>
    <string name="barcode_failure">No Barcode Captured</string>
    <string name="barcode_error">"Error Reading Barcode: %1$s"</string>
    <string name="allow_camera_management">You need to allow the app to use the camera to scan QR codes&#8230;</string>
    <string name="please_specify_content">Please specify the content to be displayed by the pop up&#8230;</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="the_extra_info_icon">The extra info icon</string>
    <string name="edit_button_label">Edit Button</string>
    <string name="info_icon">Info icon</string>
    <string name="attention">Attention</string>
    <string name="json_form_error_msg">Found %d error(s) in the form. Please correct them to submit.</string>
    <string name="json_form_on_next_error_msg">Please correct the error(s) in the form to proceed.</string>
    <string name="go_to_step">Go to Step</string>
    <string name="shows_image_on_dialog">Shows image on dialog</string>
    <string name="undo_test_result">Undo the %1$s result?</string>
    <string name="record">Record</string>
    <string name="undo">Undo</string>
    <string name="info_icon_display">The more info icon display</string>
    <string name="status_icon_display">The status icon display</string>
    <string name="simprints_guid">GUID not found</string>
    <string name="simprints_init_fail">Project id, user id or module id were not found. Please use SimprintsLibrary.init</string>
    <string name="permission_denied_title">Permission Denied</string>
    <string name="permission_messege">The app needs this permission to capture the device information required when submitting forms. Without this permission the app will not function properly. Are you sure you want to deny this permission?</string>
    <string name="multiselect_msg_on_item_added">Added</string>
    <string name="loading_multi_select_list">Loading</string>
    <string name="loading">Loading</string>
    <string name="loading_form_message">Please wait as we load your form...</string>
    <string name="opening_forms">Loading sub forms...</string>
    <string name="multiselect_already_added_msg">%s is already added</string>
    <string name="multi_select_list_msg_data_source_invalid">External DataSource not found or processed</string>
    <string name="next_step_loading">Please wait as we prepare the next step.</string>
    <!-- Duration -->
    <string name="x_seconds">%1$ds</string>
    <string name="x_minutes">%1$dm</string>
    <string name="x_hours">%1$dh</string>
    <string name="x_days">%1$dd</string>
    <string name="x_weeks">%1$dw</string>
    <string name="x_weeks_days">%1$dw %2$dd</string>
    <string name="x_months">%1$dm</string>
    <string name="x_months_weeks">%1$dm %2$dw</string>
    <string name="x_years">%1$dy</string>
    <string name="x_years_months">%1$dy %2$dm</string>
    <string name="repeating_group_not_generated_error_message">Please click the &#9989; button to generate the questions</string>

    <string name="form_update_title">Form Update</string>
    <string name="form_update_message">This form has content updates</string>
    <string name="form_changed_reopen_to_take_effect">Form has been successfully selected! Reopen this form for the changes to take effect</string>
    <string name="rollback_dialog_title">Select a rollback form</string>
    <string name="current_corrupted_form">(Current Corrupted Form)</string>
    <string name="cannot_select_corrupted_form_rollback">You cannot select this form because it\'s corrupted!</string>

    <string name="error_title">Error</string>
    <string name="form_load_error">Sorry, a fatal error occurred when loading the form. Please contact a developer for further assistance.</string>
    <string name="select_one_option">Please select one option</string>
    <string name="extended_radio_info_text_ensure_options_set">Please make sure you have set the radio button options</string>
    <string name="optibp_btn_get_started">Get Started</string>
    <string name="optibp_unable_to_receive">Unable to receive any result From Calibration App</string>
    <string name="missing_client_info">Missing client info</string>
    <string name="optibp_label">Measure the blood pressure using OptiBP</string>
    <string name="optibp_values_error">No fields defined to populate BP values</string>
    <string name="calibration_data">Missing calibration Key</string>
    <string name="invalid_optibp_data">Cannot read BP values</string>

</resources>