<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="60dp"
    android:orientation="vertical">

    <com.rey.material.widget.Button
        android:id="@+id/record_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:text="@string/record_location"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_bottom_margin"
        android:orientation="vertical">

        <com.rey.material.widget.TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/inner_components_spacing"
            android:layout_marginEnd="@dimen/inner_components_spacing"
            android:text="@string/latitude"
            android:textSize="@dimen/default_text_size" />

        <com.rey.material.widget.TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/inner_components_spacing"
            android:layout_marginEnd="@dimen/inner_components_spacing"
            android:text="@string/longitude"
            android:textSize="@dimen/default_text_size" />

        <com.rey.material.widget.TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/inner_components_spacing"
            android:layout_marginEnd="@dimen/inner_components_spacing"
            android:text="@string/altitude"
            android:textSize="@dimen/default_text_size" />

        <com.rey.material.widget.TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/inner_components_spacing"
            android:layout_marginEnd="@dimen/inner_components_spacing"
            android:text="@string/accuracy"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>
</LinearLayout>