<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/expansion_panel_dialog_padding"
    android:paddingTop="@dimen/expansion_panel_dialog_padding"
    android:paddingEnd="@dimen/expansion_panel_dialog_padding"
    android:paddingBottom="10dp">

    <com.vijay.jsonwizard.views.CustomTextView
        android:id="@+id/txt_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/accordion_content_margin"
        android:layout_marginRight="@dimen/accordion_content_margin"
        android:layout_marginBottom="30dp"
        android:maxLines="3"
        android:text="@string/undo_test_result"
        android:textColor="@color/black"
        android:textSize="@dimen/referral_dialog_title_text_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/accordion_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/accordion_content_margin"
        android:layout_marginRight="@dimen/accordion_content_margin"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@id/undo_button"
            android:layout_toLeftOf="@id/undo_button"
            android:background="@null"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/dialog_button_blue_color" />

        <Button
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/undo"
            android:textAllCaps="true"
            android:textColor="@color/dialog_button_blue_color" />
    </RelativeLayout>

</LinearLayout>